apps/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector: { app: bazarr }
  ports:
    - name: http
      port: 6767
      targetPort: 6767
